--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   picostrap5 Child Base
+ Theme Name:   Winden Timberstrap
  Theme URI:    https://picostrap.com
  Description:  Child theme for Picostrap5. Experience the power of SASS, merged with the WordPress Customizer. Implementing Bootstrap 5.3.2. Please refer to the <a target="_blank" href="https://picostrap.com/documentation/">documentation</a> to get started. 
  Author:       The LiveCanvas Team
