update autocomplete settings

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,13 +4,13 @@
 //////////////////////////////////////////////////
  
 //IMPORT BOOTSTRAP 
-// @import "bootstrap-loader"; 
+@import "bootstrap-loader"; 
 
 
-// // THE THEME STUFF 
-// @import "wp_basic_styles";      
-// @import "picostrap";  
-// @import "woocommerce";
+// THE THEME STUFF 
+@import "wp_basic_styles";      
+@import "picostrap";  
+@import "woocommerce";
 
 
 // CUSTOM CSS : THE CHILD THEME STUFF, IF ITS THERE
