some changes i haver made adding partials

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -1,7 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+    font-family: "ATR";
+    src: url("../fonts/atr.woff2") format('woff2');
+}
 
+body{
+    font-family: ATR;
+}
 :root {
     --color-visited: #0d6efd;
     --color-primary: slate;
